Remove AUTHORS and MANIFEST.in files; add ReverseGeocodeViewSet and localization updates

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -101,6 +101,8 @@
 		"wikipedia": "Wikipedia",
 		"add_notes": "Add notes",
 		"warning": "Warning",
+		"my_adventures": "My Adventures",
+		"no_linkable_adventures": "No adventures found that can be linked to this collection.",
 		"add": "Add",
 		"save_next": "Save & Next",
 		"end_date": "End Date",
@@ -136,6 +138,7 @@
 		"edit_collection": "Edit Collection",
 		"unarchive": "Unarchive",
 		"archive": "Archive",
+		"no_collections_found": "No collections found to add this adventure to.",
 		"archived_collection_message": "Collection archived successfully!",
 		"unarchived_collection_message": "Collection unarchived successfully!",
 		"delete_collection_success": "Collection deleted successfully!",
@@ -168,6 +171,8 @@
 		"adventure_update_error": "Failed to update adventure",
 		"new_adventure": "New Adventure",
 		"basic_information": "Basic Information",
+		"adventure_not_found": "There are no adventures to display. Add some using the plus button at the bottom right or try changing filters!",
+		"no_adventures_found": "No adventures found",
 		"activities": {
 			"general": "General 🌍",
 			"outdoor": "Outdoor 🏞️",
