Add is_visited filtering to AdventureViewSet and update frontend components

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -151,6 +151,7 @@
 		"visited": "Visited",
 		"planned": "Planned",
 		"duration": "Duration",
+		"all": "All",
 		"image_removed_success": "Image removed successfully!",
 		"image_removed_error": "Error removing image",
 		"no_image_url": "No image found at that URL.",
