--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -148,7 +148,23 @@
     "upload_images_here": "Ladda upp bilder här",
     "url": "URL",
     "warning": "Varning",
-    "wiki_desc": "Hämtar utdrag från Wikipedia-artikeln som matchar äventyrets namn."
+    "wiki_desc": "Hämtar utdrag från Wikipedia-artikeln som matchar äventyrets namn.",
+    "adventure_not_found": "Det finns inga äventyr att visa upp. \nLägg till några med hjälp av plusknappen längst ner till höger eller prova att byta filter!",
+    "all": "Alla",
+    "error_updating_regions": "Fel vid uppdatering av regioner",
+    "mark_region_as_visited": "Markera region {region}, {country} som besökt?",
+    "mark_visited": "Mark besökte",
+    "my_adventures": "Mina äventyr",
+    "no_adventures_found": "Inga äventyr hittades",
+    "no_collections_found": "Inga samlingar hittades att lägga till detta äventyr till.",
+    "no_linkable_adventures": "Inga äventyr hittades som kan kopplas till denna samling.",
+    "not_visited": "Ej besökt",
+    "regions_updated": "regioner uppdaterade",
+    "update_visited_regions": "Uppdatera besökta regioner",
+    "update_visited_regions_disclaimer": "Detta kan ta ett tag beroende på antalet äventyr du har besökt.",
+    "visited_region_check": "Besökte Region Check",
+    "visited_region_check_desc": "Genom att välja detta kommer servern att kontrollera alla dina besökta äventyr och markera de regioner de befinner sig i som besökta i världsresor.",
+    "wikipedia": "Wikipedia"
   },
   "home": {
     "desc_1": "Upptäck, planera och utforska med lätthet",
@@ -215,7 +231,9 @@
     "registration_disabled": "Registreringen är för närvarande inaktiverad.",
     "signup": "Registrera dig",
     "username": "Användarnamn",
-    "public_tooltip": "Med en offentlig profil kan användare dela samlingar med dig och se din profil på användarsidan."
+    "public_tooltip": "Med en offentlig profil kan användare dela samlingar med dig och se din profil på användarsidan.",
+    "profile_picture": "Profilbild",
+    "public_profile": "Offentlig profil"
   },
   "users": {
     "no_users_found": "Inga användare hittades med offentliga profiler."
@@ -232,6 +250,16 @@
     "settings_page": "Inställningssida",
     "update": "Uppdatera",
     "update_error": "Fel vid uppdatering av inställningar",
-    "update_success": "Inställningarna har uppdaterats!"
+    "update_success": "Inställningarna har uppdaterats!",
+    "change_password": "Ändra lösenord",
+    "invalid_token": "Token är ogiltig eller har gått ut",
+    "login_redir": "Du kommer då att omdirigeras till inloggningssidan.",
+    "missing_email": "Vänligen ange en e-postadress",
+    "password_does_not_match": "Lösenord stämmer inte överens",
+    "password_is_required": "Lösenord krävs",
+    "possible_reset": "Om e-postadressen du angav är kopplad till ett konto kommer du att få ett e-postmeddelande med instruktioner för att återställa ditt lösenord!",
+    "reset_password": "Återställ lösenord",
+    "submit": "Överlämna",
+    "token_required": "Token och UID krävs för lösenordsåterställning."
   }
 }
