Add i18n support for transportation, notes, checklist, and collection components

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -79,7 +79,6 @@
 		"count_txt": "results matching your search",
 		"sort": "Sort",
 		"order_direction": "Order Direction",
-		"order_by": "Order By",
 		"ascending": "Ascending",
 		"descending": "Descending",
 		"updated": "Updated",
@@ -119,6 +118,7 @@
 		"public_adventure": "Public Adventure",
 		"location_information": "Location Information",
 		"link": "Link",
+		"links": "Links",
 		"description": "Description",
 		"sources": "Sources",
 		"collection_adventures": "Include Collection Adventures",
@@ -162,6 +162,7 @@
 		"start_before_end_error": "Start date must be before end date",
 		"activity": "Activity",
 		"actions": "Actions",
+		"no_end_date": "Please enter an end date",
 		"see_adventures": "See Adventures",
 		"image_fetch_failed": "Failed to fetch image",
 		"no_location": "Please enter a location",
@@ -183,6 +184,23 @@
 		"visited_region_check_desc": "By selecting this, the server will check all of your visited adventures and mark the regions they are located in as visited in world travel.",
 		"update_visited_regions": "Update Visited Regions",
 		"update_visited_regions_disclaimer": "This may take a while depending on the number of adventures you have visited.",
+		"link_new": "Link New...",
+		"add_new": "Add New...",
+		"transportation": "Transportation",
+		"note": "Note",
+		"checklist": "Checklist",
+		"collection_archived": "This collection has been archived.",
+		"visit_link": "Visit Link",
+		"collection_completed": "You've completed this collection!",
+		"collection_stats": "Collection Stats",
+		"keep_exploring": "Keep Exploring!",
+		"linked_adventures": "Linked Adventures",
+		"notes": "Notes",
+		"checklists": "Checklists",
+		"transportations": "Transportations",
+		"itineary_by_date": "Itinerary by Date",
+		"nothing_planned": "Nothing planned for this day. Enjoy the journey!<",
+		"days": "days",
 		"activities": {
 			"general": "General 🌍",
 			"outdoor": "Outdoor 🏞️",
@@ -261,5 +279,71 @@
 		"password_does_not_match": "Passwords do not match",
 		"password_is_required": "Password is required",
 		"invalid_token": "Token is invalid or has expired"
+	},
+	"collection": {
+		"collection_created": "Collection created successfully!",
+		"error_creating_collection": "Error creating collection",
+		"new_collection": "New Collection",
+		"create": "Create",
+		"collection_edit_success": "Collection edited successfully!",
+		"error_editing_collection": "Error editing collection",
+		"edit_collection": "Edit Collection"
+	},
+	"notes": {
+		"note_deleted": "Note deleted successfully!",
+		"note_delete_error": "Error deleting note",
+		"open": "Open",
+		"failed_to_save": "Failed to save note",
+		"note_editor": "Note Editor",
+		"editing_note": "Editing note",
+		"content": "Content",
+		"save": "Save",
+		"note_public": "This note is public because it is in a public collection.",
+		"add_a_link": "Add a link"
+	},
+	"checklist": {
+		"checklist_deleted": "Checklist deleted successfully!",
+		"checklist_delete_error": "Error deleting checklist",
+		"failed_to_save": "Failed to save checklist",
+		"checklist_editor": "Checklist Editor",
+		"editing_checklist": "Editing checklist",
+		"item": "Item",
+		"items": "Items",
+		"add_item": "Add Item",
+		"new_item": "New Item",
+		"save": "Save",
+		"checklist_public": "This checklist is public because it is in a public collection.",
+		"item_cannot_be_empty": "Item cannot be empty",
+		"item_already_exists": "Item already exists"
+	},
+	"transportation": {
+		"transportation_deleted": "Transportation deleted successfully!",
+		"transportation_delete_error": "Error deleting transportation",
+		"provide_start_date": "Please provide a start date",
+		"transport_type": "Transport Type",
+		"type": "Type",
+		"transportation_added": "Transportation added successfully!",
+		"error_editing_transportation": "Error editing transportation",
+		"new_transportation": "New Transportation",
+		"date_time": "Start Date & Time",
+		"end_date_time": "End Date & Time",
+		"flight_number": "Flight Number",
+		"from_location": "From Location",
+		"to_location": "To Location",
+		"edit": "Edit",
+		"modes": {
+			"car": "Car",
+			"plane": "Plane",
+			"train": "Train",
+			"bus": "Bus",
+			"boat": "Boat",
+			"bike": "Bike",
+			"walking": "Walking",
+			"other": "Other"
+		},
+		"transportation_edit_success": "Transportation edited successfully!",
+		"edit_transportation": "Edit Transportation",
+		"start": "Start",
+		"date_and_time": "Date & Time"
 	}
 }
